Fix reset interval, increase spacing for time

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
 }
 
 .status-element {
-  width: 110px;
+  width: 170px;
 }
 
 .game-status-wrapper {
